# aicocode

./: .gitignore  config.example.yaml  pyproject.toml
aicocode/: __init__.py  __main__.py  agent.py  agent_event.py  app.py  askuser_dialog.py  base.py  config.py  config_validator.py  conversation.py  file_cache.py  llm_client.py  llm_generated_event.py  message_adaptor.py  permission_dialog.py  plan_dialog.py  prompt.py  styles.tcss
aicocode/Permissions/: __init__.py  danger.py  path_sandbox.py  permission_mode.py  rules.py  validator.py
aicocode/commands/: __init__.py  loader.py  parser.py  popup_completion.py  registry.py
aicocode/commands/handlers/: __init__.py  clear.py  compact.py  help.py  mcp.py  memory.py  permission.py  plan.py  review.py  rewind.py  session.py  status.py
aicocode/context/: __init__.py  manager.py
aicocode/file_history/: __init__.py  file_history.py
aicocode/mcp/: __init__.py  client.py  manager.py  tool_wrapper.py
aicocode/memory/: __init__.py  auto_dream.py  auto_memory.py  instructions.py  recall.py  session.py
aicocode/tools/: __init__.py  ask_user.py  bash.py  edit_diff.py  edit_file.py  exit_plan_mode.py  glob.py  grep.py  read_file.py  tool_base.py  write_file.py
aicocode/tools/impl/: tool_search.py
