[project]
name = "aicocode"
version = "0.1.0"
description = "A terminal AI coding assistant"
requires-python = ">=3.12"
dependencies = [
    "textual>=2.1.0",
    "anthropic>=0.42.0",
    "openai>=1.60.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "mcp>=1.12.0",
    "httpx>=0.27.0",
    "websockets>=14.0",
]

[project.scripts]
aicocode = "aicocode.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["aicocode"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]